--- a/MvvmTestDemo/DemoViews/CheckBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/CheckBoxDemo.xaml
@@ -9,7 +9,7 @@
              d:DesignWidth="800">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-        <CheckBox Content="CheckedFalseCheckBox" Background="Transparent" ToolTip="CheckedFalseCheckBox" />
+        <CheckBox Content="CheckedFalseCheckBox" ToolTip="CheckedFalseCheckBox" />
         <CheckBox Content="CheckedTrueCheckBox"
                   Background="Transparent"
                   IsChecked="True"
