--- a/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
+++ b/MvvmTestDemo/DemoViews/ComboBoxDemo.xaml
@@ -6,10 +6,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
              mc:Ignorable="d"
-             Foreground="{StaticResource PrimaryForegroundBrush}"
              d:DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="800"
+             Foreground="{StaticResource PrimaryForegroundBrush}">
 
     <Grid Width="{StaticResource DemoViewsDefaultWidth}" VerticalAlignment="Center">
         <Grid.RowDefinitions>
@@ -17,6 +17,7 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="20" />
             <RowDefinition Height="2*" />
+            <RowDefinition Height="50" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200" />
@@ -51,7 +52,7 @@
             </ComboBox>
             <ComboBox Width="200"
                       Margin="0,10"
-                      pc:ComboBoxAssistant.DropDownButtonFill="Green" SelectedIndex="0"
+                      SelectedIndex="0" pc:ComboBoxAssistant.DropDownButtonFill="Green"
                       Style="{StaticResource AddClearButtonComboBoxStyle}">
                 <ComboBoxItem Content="Chance" />
                 <ComboBoxItem Content="Lori" />
@@ -68,7 +69,7 @@
             </ComboBox>
             <ComboBox Width="200"
                       Margin="0,10"
-                      pc:ComboBoxAssistant.DropDownButtonFill="Green" IsEditable="True" SelectedIndex="0"
+                      IsEditable="True" SelectedIndex="0" pc:ComboBoxAssistant.DropDownButtonFill="Green"
                       Style="{StaticResource AddClearButtonComboBoxStyle}">
                 <ComboBoxItem Content="Chance" />
                 <ComboBoxItem Content="Lori" />
@@ -78,46 +79,52 @@
 
         <StackPanel Grid.Row="3" Grid.Column="1" HorizontalAlignment="Center">
             <ComboBox Width="200"
-                      pc:SelectorAttached.IsItemChecked="ComboBox_IsItemChecked"
                       ItemsSource="{Binding Lists}"
-                      SelectedIndex="0"
+                      SelectedIndex="0" pc:SelectorAttached.IsItemChecked="ComboBox_IsItemChecked"
                       Style="{StaticResource MultiComboBoxCheckBoxItemsStyle}" />
             <ComboBox Width="200"
                       Margin="0,10"
-                      pc:SelectorAttached.IsItemDelete="ComboBox_IsItemDelete"
                       ItemsSource="{Binding Lists}"
-                      SelectedIndex="0"
+                      SelectedIndex="0" pc:SelectorAttached.IsItemDelete="ComboBox_IsItemDelete"
                       Style="{StaticResource MultiComboBoxButtonItemsStyle}" />
+            <ComboBox Width="200" ItemsSource="{Binding IconLists}" Style="{StaticResource MultiComboBoxIconItemsStyle}" />
             <ComboBox Width="200"
-                      pc:SelectorAttached.IsPreviewImage="True"
+                      Margin="0,10"
                       ItemsSource="{Binding ImageLists}"
-                      Style="{StaticResource MultiComboBoxImageItemsStyle}" />
+                      pc:SelectorAttached.IsPreviewImageGif="True"
+                      Style="{StaticResource MultiComboBoxImageGifItemsStyle}" />
             <ComboBox Width="200"
-                      Margin="0,10,0,0"
-                      ItemsSource="{Binding IconLists}"
-                      Style="{StaticResource MultiComboBoxIconItemsStyle}" />
+                      ItemsSource="{Binding GifLists}"
+                      pc:SelectorAttached.IsPreviewImageGif="True"
+                      Style="{StaticResource MultiComboBoxImageGifItemsStyle}" />
         </StackPanel>
         <StackPanel Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center">
             <ComboBox Width="200"
-                      pc:SelectorAttached.IsItemChecked="ComboBox_IsItemChecked" IsEditable="True"
+                      IsEditable="True"
                       ItemsSource="{Binding Lists}"
-                      SelectedIndex="0"
+                      SelectedIndex="0" pc:SelectorAttached.IsItemChecked="ComboBox_IsItemChecked"
                       Style="{StaticResource AddClearButtonMultiComboBoxCheckBoxItemsStyle}" />
             <ComboBox Width="200"
                       Margin="0,10"
-                      pc:SelectorAttached.IsItemDelete="ComboBox_IsItemDelete" IsEditable="True"
+                      IsEditable="True"
                       ItemsSource="{Binding Lists}"
-                      SelectedIndex="0"
+                      SelectedIndex="0" pc:SelectorAttached.IsItemDelete="ComboBox_IsItemDelete"
                       Style="{StaticResource AddClearButtonMultiComboBoxButtonItemsStyle}" />
             <ComboBox Width="200"
-                      pc:SelectorAttached.IsPreviewImage="True" IsEditable="True"
-                      ItemsSource="{Binding ImageLists}"
-                      Style="{StaticResource AddClearButtonMultiComboBoxImageItemsStyle}" />
-            <ComboBox Width="200"
-                      Margin="0,10,0,0"
                       IsEditable="True"
                       ItemsSource="{Binding IconLists}"
                       Style="{StaticResource AddClearButtonMultiComboBoxIconItemsStyle}" />
+            <ComboBox Width="200"
+                      Margin="0,10"
+                      IsEditable="True"
+                      ItemsSource="{Binding ImageLists}"
+                      pc:SelectorAttached.IsPreviewImageGif="True"
+                      Style="{StaticResource AddClearButtonMultiComboBoxImageGifItemsStyle}" />
+            <ComboBox Width="200"
+                      IsEditable="True"
+                      ItemsSource="{Binding GifLists}"
+                      pc:SelectorAttached.IsPreviewImageGif="True"
+                      Style="{StaticResource AddClearButtonMultiComboBoxImageGifItemsStyle}" />
         </StackPanel>
 
         <StackPanel Grid.Row="3" Grid.Column="3">
@@ -137,9 +144,16 @@
                                Margin="10,0"
                                VerticalAlignment="Center" />
                 </WrapPanel>
-                <WrapPanel Margin="0,10,0,0">
+                <WrapPanel Margin="0,10">
+                    <Image Width="34" Height="34" Source="../Resources/Gif/timg.jpg" />
+                    <TextBlock Text="ItemsImage"
+                               FontSize="14"
+                               Margin="10,0"
+                               VerticalAlignment="Center" />
+                </WrapPanel>
+                <WrapPanel>
                     <pc:Gif Width="34" Height="34" GifSource="../Resources/Gif/programmer.gif" />
-                    <TextBlock Text="ItemsImageGif"
+                    <TextBlock Text="ItemsGif"
                                FontSize="14"
                                Margin="10,0"
                                VerticalAlignment="Center" />
