--- a/MvvmTestDemo/DemoViews/WindowsDemo.xaml
+++ b/MvvmTestDemo/DemoViews/WindowsDemo.xaml
@@ -5,8 +5,10 @@
              xmlns:local="clr-namespace:MvvmTestDemo.DemoViews"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
+             d:DataContext="{Binding RelativeSource={RelativeSource Self}}"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="800"
+             DataContext="{Binding RelativeSource={RelativeSource Self}}">
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
         <Button x:Name="PrintPreviewWindow"
@@ -27,10 +29,22 @@
                 Content="FixedSizeWindow"
                 Margin="0,20"
                 Click="Button_Click" />
-        <Button x:Name="ToastMessage"
+        <Button x:Name="DialogWindow"
+                Width="200" Height="34"
+                Content="OpenDialogWindow"
+                Click="Button_Click" />
+        <Button x:Name="DemoDialogWindow"
+                Width="200" Height="34"
+                Content="OpenDemoDialogWindow"
+                Margin="0,20"
+                Click="Button_Click" />
+        <TextBox Width="300" Height="40"
+                 Text="{Binding Text}"
+                 Margin="0,20" />
+        <!--<Button x:Name="ToastMessage"
                 Width="200" Height="34"
                 Content="OpenToastMessage"
-                Click="Button_Click" />
+                Click="Button_Click" />-->
     </StackPanel>
 
 </UserControl>
