--- a/MvvmTestDemo/UserControls/Adorner.xaml
+++ b/MvvmTestDemo/UserControls/Adorner.xaml
@@ -6,10 +6,14 @@
              xmlns:local="clr-namespace:MvvmTestDemo.UserControls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:pc="https://Chance.CookPopularControl/2021/xaml"
+             xmlns:prism="http://prismlibrary.com/"
+             xmlns:vm="clr-namespace:MvvmTestDemo.DemoViewModels"
              mc:Ignorable="d"
-             Focusable="True"
+             d:DataContext="{Binding Source={d:DesignInstance Type=vm:AdornerViewModel}}"
              d:DesignHeight="450"
-             d:DesignWidth="800">
+             d:DesignWidth="400"
+             Focusable="True"
+             prism:ViewModelLocator.AutoWireViewModel="True">
 
     <StackPanel x:Name="RootGrid"
                 Width="400" Height="400"
@@ -17,14 +21,19 @@
                 HorizontalAlignment="Left">
         <Button x:Name="ChanceBtn"
                 Width="300" Height="40"
-                Content="Chance" />
+                Content="{Binding Content1}" />
+        <TextBlock Width="300"
+                   Text="{Binding Message}"
+                   Margin="0,10"
+                   VerticalAlignment="Bottom"
+                   TextAlignment="Center" />
         <TextBox x:Name="ChanceTxt"
                  Width="300" Height="40"
-                 Text="Chance"
-                 Margin="0,50" />
+                 Text="{Binding Result}" />
         <Button Width="300" Height="40"
-                Content="CloseDialogBox"
-                Command="{x:Static pc:DialogBox.CloseDialogCommand}" />
+                Content="{Binding Content2}"
+                Command="{x:Static pc:DialogBox.CloseDialogCommand}"
+                Margin="0,20,0,0" />
     </StackPanel>
 
 </UserControl>
