--- a/MvvmTestDemo/UserControls/OverViewDemo.xaml
+++ b/MvvmTestDemo/UserControls/OverViewDemo.xaml
@@ -110,7 +110,7 @@
                 <WrapPanel Margin="8">
                     <TextBox Width="300" Height="34"
                              FontSize="14"
-                             Style="{StaticResource ValidationTextBoxStyle}">
+                             Style="{StaticResource TextBoxValidationStyle}">
                         <TextBox.Text>
                             <Binding Mode="TwoWay" Path="TextContent" UpdateSourceTrigger="PropertyChanged">
                                 <Binding.ValidationRules>
